(include_subdirs unqualified)

(executable
 (name main)
 (modules main lexer expr stmt parser value env evaluator)
 (libraries unix)
 (ocamlopt_flags (:standard -O3 -unbox-closures)))

(executable
 (name bench)
 (modules bench lexer expr stmt parser value env evaluator)
 (libraries unix core_bench core_unix)
 (ocamlopt_flags (:standard -O3 -unbox-closures)))
