(lang dune 3.21)

(name lox_impl)

(generate_opam_files true)

(package
 (name lox_impl)
 (maintainers "Arpan Pandey <hello@arpanpandey.dev>")
 (authors "Arpan Pandey <hello@arpanpandey.dev>")
 (synopsis "An implementation of the Lox programming language, implemented in OCaml.")
 (homepage "https://arpanpandey.dev")
 (license "MIT")
 (allow_empty true)
 (version 0.1))
